--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
       width:128px;
       float:left;
       border: 2px;
+      border-radius:10px;      
       border-style: solid;
       border-color: rgb(0,0,0);
       color:white;
       margin-top:10px;
-      border-radius:10px;      
+      font-size:20px;
 
 	
     }
