--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
     .current_drill {
     	visibility:hidden;
     }
-    
+    #text.next_to {
+    	margin:auto;
+    }
     @media (min-width:1400px) {
 	    .current_drill {
             width:15vw;
@@ -191,16 +193,16 @@
     <a target="_blank" href="https://www.youtube.com/watch?v=mrW1QN44ZGQ"><div id="breaststroke" class="next_to" onmouseover="edit_drill('do 2 kick before doing breaststroke pull')">2 kick breast drill</div></a>a
     <a target="_blank" href="https://www.youtube.com/watch?v=sudML0wp6Pw"><div id="breaststroke" class="next_to shift_small shift_normal" onmouseover="edit_drill('do breaststroke kick on back')">breaststroke kick on back</div></a>
 	<h3> Backstroke </h3>
-    <div id="backstroke" class="next_to shift_big" onmouseover="edit_drill('do backstroke pull with a buoy')">backstroke pull(with buoy)</div>
-    <div id="backstroke" class="next_to shift_small" onmouseover="edit_drill('do backstroke under water')">under water backstroke</div>
-    <div id="backstroke" class="next_to" onclick="edit_drill('do underwater dolphin kick on back')">butterfly kick on back</div>
-    <div id="backstroke" class="next_to shift_small" onmouseover="edit_drill('do breastroke pull on your back)">breaststroke kick on back</div>
-    <div id="backstroke" class="next_to shift_normal" onmouseover="edit_drill('swing your arms as fast as possible')">windmill drill</div>
+    <a target="_blank" href="https://www.youtube.com/watch?v=lB2teu4peCo"><div id="backstroke" class="next_to shift_big" onmouseover="edit_drill('do backstroke pull with a buoy')">backstroke pull(with buoy)</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=41KPr1wQ1u0"><div id="backstroke" class="next_to shift_small" onmouseover="edit_drill('do underwater dolphin kick on back')">under water butterfly backstroke</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=DjvJVIWKphE"><div id="backstroke" class="next_to" onmouseover="edit_drill('switch every 12 kicks')">12 kick switch</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=sudML0wp6Pw"><div id="backstroke" class="next_to shift_small" onmouseover="edit_drill('do breastroke pull on your back)">breaststroke kick on back</div></a>
+    <a target="_blank" href="https://www.youtube.com/shorts/MpwcPwch27U"><div id="backstroke" class="next_to shift_normal" onmouseover="edit_drill('swing your arms as fast as possible')">windmill drill</div></a>
   </div>
   <p class="current_drill" id="drill_information">about the drill</p>
 
   <footer style="clear:left; color:white; text-align:center;">
-  Credits to Myswimpro, Fares Ksebati, SwimLifeGuru, and Jarasport
+  Credits to Myswimpro, Fares Ksebati, SwimLifeGuru, Jarasport, Skills nt shorts, and ProSwimmer
   </footer>
   <script>
     document.getElementById("text").innerText = 'Your set:';
