--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       border-color: rgb(0,0,0);
       color:white;
       margin-top:10px;
-      font-size:22px;
+      font-size:20px;
 
 	
     }
@@ -153,6 +153,9 @@
     	visibility:visible;
     }
     }
+    .page_view {
+    	text_align:center;
+    }
   </style>
 </head>
 <body>
@@ -202,6 +205,7 @@
   <footer style="clear:left; color:white; text-align:center;">
   Credits to Myswimpro, Fares Ksebati, SwimLifeGuru, Jarasport, Skills nt shorts, and ProSwimmer
   </footer>
+  <a class="page_view" href="https://info.flagcounter.com/9DkL"><img src="https://s11.flagcounter.com/countxl/9DkL/bg_4A62FF/txt_FFFFF7/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
   <script>
     document.getElementById("text").innerText = 'Your set:';
     function show_drills() {
