--- a/index.html
+++ b/index.html
@@ -177,28 +177,28 @@
   	<h2> Drills used (hover to learn more)</h2>
     <h3> Freestyle </h3>
   	<a target="_blank" href="https://www.youtube.com/watch?v=HH0TlKA-UFU"><div id="freestyle" class="next_to shift_small shift_big" onmouseover="edit_drill('Use your fist instead of your palm')"> Fist Drill</div></a>
-  	<a target="_blank" href="https://www.youtube.com/watch?v=Ul_By69Mc8Y"><div id="freestyle" class="next_to" onmouseover="edit_drill('when swinging your arms, you should tap your hips, shoulders, and then head')"> Zipper Drill </div></a>
-  	<a target="_blank" href="https://www.youtube.com/watch?v=nYVH4TVNDLY"><div id="freestyle" class="next_to shift_small" onmouseover="edit_drill('bring your head up')"> Head Up Drill </div></a>
-  	<a target="_blank" href="https://www.youtube.com/watch?v=Bt1hdL89dM0"><div id="freestyle" class="next_to" onmouseover="edit_drill('drag your fingertips when you bring your arm forward')"> Drag Finger Tips Drill </div></a>
+  	<a target="_blank" href="https://www.youtube.com/watch?v=Ul_By69Mc8Y"><div id="freestyle" class="next_to" onmouseover="edit_drill('When swinging your arms, you should tap your hips, shoulders, and then head')"> Zipper Drill </div></a>
+  	<a target="_blank" href="https://www.youtube.com/watch?v=nYVH4TVNDLY"><div id="freestyle" class="next_to shift_small" onmouseover="edit_drill('Bring your head up')"> Head Up Drill </div></a>
+  	<a target="_blank" href="https://www.youtube.com/watch?v=Bt1hdL89dM0"><div id="freestyle" class="next_to" onmouseover="edit_drill('Drag your fingertips when you bring your arm forward')"> Drag Finger Tips Drill </div></a>
   	<a target="_blank" href="https://www.youtube.com/watch?v=8fGiNwlnS0g"><div id="freestyle" class="next_to shift_small shift_normal" onmouseover="edit_drill('Use fins in freestyle')"> With Fins Drill </div></a>
     <h3> Butterfly </h3>
-  	<a target="_blank" href="https://www.youtube.com/watch?v=Zj77HGobUjI"><div id="butterfly" class="next_to shift_big" onmouseover="edit_drill('do butterfly with one hand')"> 1 Hand Butterfly Drill</div></a>
-  	<a target="_blank" href="https://www.youtube.com/watch?v=bBGd8ZcWgMU"><div id="butterfly" class="next_to shift_small" onmouseover="edit_drill('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 Drill </div></a>
+  	<a target="_blank" href="https://www.youtube.com/watch?v=Zj77HGobUjI"><div id="butterfly" class="next_to shift_big" onmouseover="edit_drill('Do butterfly with one hand')"> 1 Hand Butterfly Drill</div></a>
+  	<a target="_blank" href="https://www.youtube.com/watch?v=bBGd8ZcWgMU"><div id="butterfly" class="next_to shift_small" onmouseover="edit_drill('Do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 Drill </div></a>
   	<a target="_blank" href="https://www.youtube.com/watch?v=kHrdE5CG2yc"><div id="butterfly" class="next_to" onmouseover="edit_drill('Use your whole body when doing dolphin kick')">Butterfly Flow Drill </div></a>
-  	<a target="_blank" href="https://www.youtube.com/shorts/K6F5Bfta_QI"><div id="butterfly" class="next_to shift_small" onmouseover="edit_drill('do freestyle kick with butterfly hands')"> Freestyle Kick Butterfly Hands </div></a>
-  	<a target="_blank" href="https://www.youtube.com/shorts/K6F5Bfta_QI"><p id="butterfly" class="next_to shift_normal" onmouseover="edit_drill('use your fist instead of your palm when doing butterfly')"> Butterfly Fist Drill </p></a>
+  	<a target="_blank" href="https://www.youtube.com/shorts/K6F5Bfta_QI"><div id="butterfly" class="next_to shift_small" onmouseover="edit_drill('Do freestyle kick with butterfly hands')"> Freestyle Kick Butterfly Hands </div></a>
+  	<a target="_blank" href="https://www.youtube.com/shorts/K6F5Bfta_QI"><p id="butterfly" class="next_to shift_normal" onmouseover="edit_drill('Use your fist instead of your palm when doing butterfly')"> Butterfly Fist Drill </p></a>
     <h3> Breaststroke </h3>
-    <a target="_blank" href="https://www.youtube.com/watch?v=KZxZ7D6w0bk"><div id="breaststroke" class="next_to shift_big" onmouseover="edit_drill('do breaststroke pull with a butterfly kick to bring your legs up')"> Butterfly/Kick Breast Arms</div></a>
-    <a target="_blank" href="https://www.youtube.com/watch?v=-2-mdGviPHc"><div id="breaststroke" class="next_to" onmouseover="edit_drill('do freestyle kick with breaststroke arms')">Free Kick/Breast Arms </div></a>
-    <a target="_blank" href="https://www.youtube.com/watch?v=GvXL-2UU99g"><div id="breaststroke" class="next_to shift_small" onmouseover="edit_drill('put your arms on your heal in breaststroke')">Heal Tag Drill</div></a>
-    <a target="_blank" href="https://www.youtube.com/watch?v=mrW1QN44ZGQ"><div id="breaststroke" class="next_to" onmouseover="edit_drill('do 2 kick before doing breaststroke pull')">2 Kick Breast Drill</div></a>a
-    <a target="_blank" href="https://www.youtube.com/watch?v=sudML0wp6Pw"><div id="breaststroke" class="next_to shift_small shift_normal" onmouseover="edit_drill('do breaststroke kick on back')">Breaststroke Kick on Back</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=KZxZ7D6w0bk"><div id="breaststroke" class="next_to shift_big" onmouseover="edit_drill('Do breaststroke pull with a butterfly kick to bring your legs up')"> Butterfly/Kick Breast Arms</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=-2-mdGviPHc"><div id="breaststroke" class="next_to" onmouseover="edit_drill('Do freestyle kick with breaststroke arms')">Free Kick/Breast Arms </div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=GvXL-2UU99g"><div id="breaststroke" class="next_to shift_small" onmouseover="edit_drill('Put your arms on your heal in breaststroke')">Heal Tag Drill</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=mrW1QN44ZGQ"><div id="breaststroke" class="next_to" onmouseover="edit_drill('Do 2 kick before doing breaststroke pull')">2 Kick Breast Drill</div></a>a
+    <a target="_blank" href="https://www.youtube.com/watch?v=sudML0wp6Pw"><div id="breaststroke" class="next_to shift_small shift_normal" onmouseover="edit_drill('Do breaststroke kick on back')">Breaststroke Kick on Back</div></a>
 	<h3> Backstroke </h3>
-    <a target="_blank" href="https://www.youtube.com/watch?v=lB2teu4peCo"><div id="backstroke" class="next_to shift_big" onmouseover="edit_drill('do backstroke pull with a buoy')">Backstroke Pull(with buoy)</div></a>
-    <a target="_blank" href="https://www.youtube.com/watch?v=41KPr1wQ1u0"><div id="backstroke" class="next_to shift_small" onmouseover="edit_drill('do underwater dolphin kick on back')">Under Water Butterfly Backstroke</div></a>
-    <a target="_blank" href="https://www.youtube.com/watch?v=DjvJVIWKphE"><div id="backstroke" class="next_to" onmouseover="edit_drill('switch every 12 kicks')">12 Kick Switch</div></a>
-    <a target="_blank" href="https://www.youtube.com/watch?v=sudML0wp6Pw"><div id="backstroke" class="next_to shift_small" onmouseover="edit_drill('do breastroke pull on your back)">Breaststroke Kick on Back</div></a>
-    <a target="_blank" href="https://www.youtube.com/shorts/MpwcPwch27U"><div id="backstroke" class="next_to shift_normal" onmouseover="edit_drill('swing your arms as fast as possible')">Windmill Drill</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=lB2teu4peCo"><div id="backstroke" class="next_to shift_big" onmouseover="edit_drill('Do backstroke pull with a buoy')">Backstroke Pull(with buoy)</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=41KPr1wQ1u0"><div id="backstroke" class="next_to shift_small" onmouseover="edit_drill('Do underwater dolphin kick on back')">Under Water Butterfly Backstroke</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=DjvJVIWKphE"><div id="backstroke" class="next_to" onmouseover="edit_drill('Switch every 12 kicks')">12 Kick Switch</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=sudML0wp6Pw"><div id="backstroke" class="next_to shift_small" onmouseover="edit_drill('Do breastroke pull on your back)">Breaststroke Kick on Back</div></a>
+    <a target="_blank" href="https://www.youtube.com/shorts/MpwcPwch27U"><div id="backstroke" class="next_to shift_normal" onmouseover="edit_drill('Swing your arms as fast as possible')">Windmill Drill</div></a>
   </div>
   <p class="current_drill" id="drill_information">about the drill</p>
 
