--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     	background-color:purple;
     }
     #backstroke {
-    	background-color:pink;
+    	background-color:green;
     }
     h2 {
       margin-left: auto;
