--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <a target="_blank" href="https://www.youtube.com/watch?v=KZxZ7D6w0bk"><div id="breaststroke" class="next_to shift_big" onmouseover="edit_drill('Do breaststroke pull with a butterfly kick to bring your legs up')"> Butterfly/Kick Breast Arms</div></a>
     <a target="_blank" href="https://www.youtube.com/watch?v=-2-mdGviPHc"><div id="breaststroke" class="next_to" onmouseover="edit_drill('Do freestyle kick with breaststroke arms')">Free Kick/Breast Arms </div></a>
     <a target="_blank" href="https://www.youtube.com/watch?v=GvXL-2UU99g"><div id="breaststroke" class="next_to shift_small" onmouseover="edit_drill('Put your arms on your heal in breaststroke')">Heal Tag Drill</div></a>
-    <a target="_blank" href="https://www.youtube.com/watch?v=mrW1QN44ZGQ"><div id="breaststroke" class="next_to" onmouseover="edit_drill('Do 2 kick before doing breaststroke pull')">2 Kick Breast Drill</div></a>a
+    <a target="_blank" href="https://www.youtube.com/watch?v=mrW1QN44ZGQ"><div id="breaststroke" class="next_to" onmouseover="edit_drill('Do 2 kick before doing breaststroke pull')">2 Kick Breast Drill</div></a>
     <a target="_blank" href="https://www.youtube.com/watch?v=sudML0wp6Pw"><div id="breaststroke" class="next_to shift_small shift_normal" onmouseover="edit_drill('Do breaststroke kick on back')">Breaststroke Kick on Back</div></a>
 	<h3> Backstroke </h3>
     <a target="_blank" href="https://www.youtube.com/watch?v=lB2teu4peCo"><div id="backstroke" class="next_to shift_big" onmouseover="edit_drill('Do backstroke pull with a buoy')">Backstroke Pull(with buoy)</div></a>
