--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	    clear:both;
     }
     h3 {
-	margin-top:30px;
     	clear:both;
     }
     body {
@@ -91,15 +90,19 @@
 
     #freestyle {
     	background-color:blue;
+	margin-bottom:20px;
     }
     #butterfly {
     	background-color:orange;
+	margin-bottom:20px;
     }
     #breaststroke {
     	background-color:purple;
+	margin-bottom:20px;
     }
     #backstroke {
     	background-color:green;
+	margin-bottom:20px;
     }
     h2 {
       margin-left: auto;
