--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       text-align:center;
     }
     button {
+      cursor:pointer;
       float:center;
       box-sizing: border-box;
       margin:auto;
