--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
 	<p class="displaying" id="the_text">5200</p>
     <h2 style="color:white"> Stroke </h2>
     <button class="special" onclick="stroke=0; display_stroke();">All</button>
-	<button class="special" onclick="stroke=1; display_stroke();">freestyle</button>
-	<button class="special" onclick="stroke=2; display_stroke();">backstroke</button>
-    <button class="special" onclick="stroke=3; display_stroke();">breaststroke</button>
-    <button class="special" onclick="stroke=4; display_stroke();">butterfly</button>
+	<button class="special" onclick="stroke=1; display_stroke();">Freestyle</button>
+	<button class="special" onclick="stroke=2; display_stroke();">Backstroke</button>
+    <button class="special" onclick="stroke=3; display_stroke();">Breaststroke</button>
+    <button class="special" onclick="stroke=4; display_stroke();">Butterfly</button>
     <button class="special" onclick="stroke=5; display_stroke();">IM</button>
     <br>
     <p id="stroke_displayer"class="stroke_displaying">All</p>
