--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       background-image: url("https://wallpaperaccess.com/full/2151201.jpg")
     }
     h2 {
+      color:white;
       margin-left:auto;
       margin-right:auto;
     }
@@ -180,6 +181,10 @@
     	color:white;
         font-size:30px;
     }
+    .amount_drills {
+    	font-size:40px;
+        text-align:center;
+    }
   </style>
 </head>
 <body>
@@ -188,12 +193,12 @@
   <div class="first">
     <h1> Swimming set generator </h1>
     <h2 style="color:white"> Set Length </h2>
-  	<button onclick="getElementById('length').value = Number(getElementById('length').value)+50; display(getElementById('length'));">increase set length</button>
-    <button onclick="getElementById('length').value-=50; display(getElementById('length'));">decrease set length</button>
+  	<button onclick="getElementById('length').value = Number(getElementById('length').value)+50; display(getElementById('length'));">Increase Length</button>
+    <button onclick="getElementById('length').value-=50; display(getElementById('length'));">Decrease Length</button>
     <input type='range' onchange="display(this)" min='400' max='10000' id='length'/>
     <br>
 	<p class="displaying" id="the_text">5200</p>
-    <h2 style="color:white"> Stroke </h2>
+    <h2 > Stroke </h2>
     <button class="special" onclick="stroke=0; display_stroke();">All</button>
 	<button class="special" onclick="stroke=1; display_stroke();">Freestyle</button>
 	<button class="special" onclick="stroke=2; display_stroke();">Backstroke</button>
@@ -202,7 +207,10 @@
     <button class="special" onclick="stroke=5; display_stroke();">IM</button>
     <br>
     <p id="stroke_displayer"class="stroke_displaying">All</p>
-    <button onclick="start()"> create swimming set </button>
+    <h2>yards of drills</h2>
+    <input class="amount_drills" id="drills_using" value="200">
+    <br>
+    <button onclick="start()"> Create Swimming Set </button>
   </div>
   <p id="text">Your set: </p>
   <button onclick="show_drills()">show/hide drills</button>
@@ -241,7 +249,7 @@
   <a class="page_view" href="https://info.flagcounter.com/9DkL"><img src="https://s11.flagcounter.com/countxl/9DkL/bg_4A62FF/txt_FFFFF7/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
   <script>
   	let stroke = 0;
-  	let strokes = ['All','freestyle','backstroke','breaststroke','butterfly','IM'];
+  	let strokes = ['All','Freestyle','Backstroke','Breaststroke','Butterfly','IM'];
     document.getElementById("text").innerText = 'Your set:';
     function show_drills() {
       obj = document.getElementById("drills");
@@ -258,12 +266,7 @@
       drills = [["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","cobra strike drill","3 kick breast drill","heal tag drill","butterfly kick breast arms","under water dolphin kick","backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill"],["backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["cobra strike drill","3 kick breast drill","butterfly kick breast arms","heal tag drill","breaststroke kick on back"],["1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill"],["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","cobra strike drill","3 kick breast drill","heal tag drill","butterfly kick breast arms","under water dolphin kick","backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"]];
       document.getElementById("text").innerText = 'Your set:';
       set_length = Math.round(Number(document.getElementById('length').value)/25)*25;
-      type_swim = prompt('If you want to practice endurance and sprinting type 1 (with 2 drills), if you want postures, then type 2 (with 4 drills), and if you want a custom number of drills type 3')
-      if (type_swim==='3'){
-	      drill_length = Number(prompt("how much yards of drills?(no more than "+ drills[stroke].length*100+')'))
-      } else {
-      	drill_length = type_swim*200
-      }
+      drill_length = Number(document.getElementById('drills_using').value);
       test_length = set_length;
       warm_up = (3+Math.round(Math.random()))*50;
       document.getElementById("text").innerText += '\n--------warm up---------';
@@ -281,7 +284,6 @@
 		}
 	if (test_length>0) {
         document.getElementById("text").innerText += '\n-------drill set---------';
-
         if (test_length < drill_length+50) {
 	
           for (let i = 0; i < Math.floor(test_length/100); i++) {
@@ -291,7 +293,6 @@
           }
           test_length = (test_length/100-Math.floor(test_length/100))*100;
         } else {
-	  
           for (let i = 0; i < drill_length/100; i++) {
             rand = Math.floor((drills[stroke].length-1)*Math.random());
             document.getElementById("text").innerText += '\n100 ' + drills[stroke][rand];
