--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   
   
   <div class="first">
-    <h1> Swimming set generator </h1>
+    <h1> Swimming Set Generator </h1>
     <h2 style="color:white"> Set Length </h2>
   	<button onclick="getElementById('length').value = Number(getElementById('length').value)+50; display(getElementById('length'));">Increase Length</button>
     <button onclick="getElementById('length').value-=50; display(getElementById('length'));">Decrease Length</button>
@@ -207,7 +207,7 @@
     <button class="special" onclick="stroke=5; display_stroke();">IM</button>
     <br>
     <p id="stroke_displayer"class="stroke_displaying">All</p>
-    <h2>yards of drills</h2>
+    <h2>Yards Of Drills</h2>
     <input class="amount_drills" id="drills_using" value="200">
     <br>
     <button onclick="start()"> Create Swimming Set </button>
