--- a/index.html
+++ b/index.html
@@ -168,15 +168,7 @@
     	margin:auto;
     }
 
-    span {
-    	margin-right:5vw;
-        font-size:40px;
-    	background-color:blue;
-        color:white;
-        border-color: rgb(0,0,0);
-        border-width:1px;
-        
-    }
+
     .stroke_displaying {
     	color:white;
         font-size:30px;
@@ -207,7 +199,7 @@
     <button class="special" onclick="stroke=5; display_stroke();">IM</button>
     <br>
     <p id="stroke_displayer"class="stroke_displaying">All</p>
-    <h2>Yards Of Drills</h2>
+    <h2 id="show_max_drills">Yards Of Drills (no more than 1900)</h2>
     <input class="amount_drills" id="drills_using" value="200">
     <br>
     <button onclick="start()"> Create Swimming Set </button>
@@ -248,6 +240,8 @@
   </footer>
   <a class="page_view" href="https://info.flagcounter.com/9DkL"><img src="https://s11.flagcounter.com/countxl/9DkL/bg_4A62FF/txt_FFFFF7/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
   <script>
+  	let fast_swims = [["100 free","25x4 fly","100 breast","100 back","100 IM","100 Frim","4x25 free sprint","100 pull","50x2 fly"],['100 free','4x25 free sprint','100 pull','100 Frim'],['100 back','100 IM','100 Frim'],['100 breast','100 Frim','100 IM'],['50x2 fly','25x4 fly','100 IM','100 free(relax)','100 fly','100 IM'],['100 IM','100 Frim','50x2 IM']];
+  	let drills = [["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","cobra strike drill","3 kick breast drill","heal tag drill","butterfly kick breast arms","under water dolphin kick","backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill"],["backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["cobra strike drill","3 kick breast drill","butterfly kick breast arms","heal tag drill","breaststroke kick on back"],["1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill"],["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","cobra strike drill","3 kick breast drill","heal tag drill","butterfly kick breast arms","under water dolphin kick","backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"]];
   	let stroke = 0;
   	let strokes = ['All','Freestyle','Backstroke','Breaststroke','Butterfly','IM'];
     document.getElementById("text").innerText = 'Your set:';
@@ -262,8 +256,7 @@
       }
     }
     function start() {
-      fast_swims = [["100 free","25x4 fly","100 breast","100 back","100 IM","100 Frim","4x25 free sprint","100 pull","50x2 fly"],['100 free','4x25 free sprint','100 pull','100 Frim'],['100 back','100 IM','100 Frim'],['100 breast','100 Frim','100 IM'],['50x2 fly','25x4 fly','100 IM','100 free(relax)','100 fly','100 IM'],['100 IM','100 Frim','50x2 IM']];
-      drills = [["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","cobra strike drill","3 kick breast drill","heal tag drill","butterfly kick breast arms","under water dolphin kick","backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill"],["backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["cobra strike drill","3 kick breast drill","butterfly kick breast arms","heal tag drill","breaststroke kick on back"],["1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill"],["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","cobra strike drill","3 kick breast drill","heal tag drill","butterfly kick breast arms","under water dolphin kick","backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"]];
+      
       document.getElementById("text").innerText = 'Your set:';
       set_length = Math.round(Number(document.getElementById('length').value)/25)*25;
       drill_length = Number(document.getElementById('drills_using').value);
@@ -342,6 +335,7 @@
     }
 	function display_stroke() {
     	document.getElementById('stroke_displayer').innerText = strokes[stroke];
+        document.getElementById('show_max_drills').innerText = 'Yards of Drills ' + '(no more than ' + drills[stroke].length*100 + ')';
     }
   </script>
 </body>
