--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 	      alert('To much drills');
       } else {
       if (test_length > 0) {
-        if (test_length>300 && stroke===5 && type_swim === '1')  {
+        if (test_length>300 && stroke===5 && drill_length<300)  {
 		document.getElementById("text").innerText += '\n6x50 IM order (butterfly to back back to breast and then breast to free and repeat)';
 		test_length = test_length-200;
 	}
