--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       } else {
       if (test_length > 0) {
         if (test_length>300 && stroke===5 && drill_length<300)  {
-		document.getElementById("text").innerText += '\n6x50 IM order (butterfly to back back to breast and then breast to free and repeat)';
+		document.getElementById("text").innerText += '\n6x50 IM order (butterfly to back, back to breast, and then breast to free and repeat)';
 		test_length = test_length-200;
 	}
 	if (test_length>0) {
