--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
     }
     function display(obj) {
-    	document.getElementById("the_text").innerText = Math.round(obj.value/50)*50;
+    	document.getElementById("the_text").innerText = Math.round(obj.value/50)*50 +" yards";
     }
     function edit_drill(text) {
     	document.getElementById("drill_information").innerText = "about the drill \n -----\n" + text;
