--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <button style="margin-bottom:10px" onclick="getElementById('length').value-=50; display(getElementById('length'));">Decrease Length</button>
     <input type='range' onchange="display(this)" min='400' max='10000' id='length'/>
     <br>
-	<p class="displaying" id="the_text">5200</p>
+	<p class="displaying" id="the_text">5200 yards</p>
     <h2 > Stroke </h2>
     <button class="special" onclick="stroke=0; display_stroke();">All</button>
 	<button class="special" onclick="stroke=1; display_stroke();">Freestyle</button>
