--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <button onclick="start()"> Create Swimming Set </button>
   </div>
   <p id="text">Your set: </p>
-  <button onclick="show_drills()">show/hide drills</button>
+  <button onclick="show_drills()">Show/hide drills</button>
   <div id="drills">
   	<h2> Drills used (hover to learn more)</h2>
     <h3> Freestyle </h3>
