--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
     <br>
     <p id="stroke_displayer"class="stroke_displaying">All</p>
     <h2 id="show_max_drills">Yards Of Drills (no more than 1900)</h2>
-    <input class="amount_drills" id="drills_using" value="200">
+    <br>
+    <input style="width:100px; "class="amount_drills" id="drills_using" value="200">
     <br>
     <button onclick="start()"> Create Swimming Set </button>
   </div>
